2009-03-20 Frank Naegler  <typo3@naegler.net>

	* added new validator: tx_feuserregister_validator_Age
	* added stdWraps for fields, labels and errorMessages
	* added Oberserver call in step model

2009-03-19 Frank Naegler  <typo3@naegler.net>

	* project moved to svn.typo3.org
	* added prepare function before write data to database (avoiding SQL injection)
	* added class tx_feuserregister_Request to encapsulate every access to the request parameters
	* added t3lib_div:removeXSS() to tx_feuserregister_Request->get()